docs: fix overlapping copy to clipboard button (#32)

--- a/docs/src/styles/globals.css
+++ b/docs/src/styles/globals.css
@@ -159,15 +159,11 @@
     @apply mt-0 rounded-t-none;
   }
 
-  pre[data-theme="light"],
-  code[data-theme="light"],
-  [data-rehype-pretty-code-title][data-theme="light"] {
+  [data-theme="light"] {
     @apply block dark:hidden;
   }
 
-  pre[data-theme="dark"],
-  code[data-theme="dark"],
-  [data-rehype-pretty-code-title][data-theme="dark"] {
+  [data-theme="dark"] {
     @apply hidden dark:block;
   }
 }
